syntax = "proto3";

package USER;

service UserService {
  rpc FindOneUserByUsername (Username) returns (User) {}
}

message Username {
  string username = 1;
}

message User{
  int32 id = 1;
  string email = 2;
  string password = 3;
}
